2009-02-03  David Hyatt  <hyatt@apple.com>

        Move the isRenderInline checks for clientWidth/Height and scrollWidth/Height to the DOM element
        versions of the functions.  Since internal render tree usage doesn't ever (incorrectly) call these
        functions on RenderInlines, this manages to get virtual function calls out of contentWidth/Height and
        availableWidth/Height.

        Reviewed by Mark Rowe

        * dom/Element.cpp:
        (WebCore::Element::clientWidth):
        (WebCore::Element::clientHeight):
        (WebCore::Element::scrollWidth):
        (WebCore::Element::scrollHeight):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::clientWidth):
        (WebCore::RenderBox::clientHeight):
        (WebCore::RenderBox::scrollWidth):
        (WebCore::RenderBox::scrollHeight):

2009-02-03  Brad Garcia  <bgarcia@google.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20443
        Remove call to canResize when trying to determine if pointer
        is within a frame.
        Also removed the implementation of canResize as it is no longer used.

        Test: fast/frames/frame-dead-region.html

        * rendering/RenderFrameSet.cpp:
        (WebCore::RenderFrameSet::nodeAtPoint):
        * rendering/RenderFrameSet.h:

2009-02-03  David Hyatt  <hyatt@apple.com>

        Reduce the number of calls to virtualChildren (indirectly made via RenderObject::firstChild()).
        This is a small gain on the PLT.

        Reviewed by Mark Rowe

        * rendering/bidi.cpp:
        (WebCore::inlineWidth):
        (WebCore::bidiNext):

2009-02-03  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23628

        Fix selection repainting to do container-relative repaints. RenderView now
        repaints the selection using the containerForRepaint() for each RenderSelectionInfo.